Terminando a documentação do usuário.
